--- a/src/styles/imports/portfolio.styl
+++ b/src/styles/imports/portfolio.styl
@@ -4,9 +4,9 @@
 
 .Watermark {
     margin: 0;
-    height: 165px;
+    height: 160px;
     position: absolute;
-    bottom: -5px;
+    bottom: 0;
     right: 0;
     overflow: hidden;
     font-size: 150px;
@@ -24,21 +24,21 @@
 }
 @media (min-width: 768px) {
     .Watermark {
-        height: 177px;
+        height: 170px;
         font-size: 180px;
         letter-spacing: -15px;
     }
 }
 @media (min-width: 1024px) {
     .Watermark {
-        height: 200px;
+        height: 190px;
         font-size: 240px;
         letter-spacing: -21px;
     }
 }
 @media (min-width: 1100px) {
     .Watermark {
-        height: 220px;
+        height: 215px;
         font-size: 300px;
         letter-spacing: -29px;
     }
